--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,35 +1,21 @@
-/* == color palette == */
-/* text: #241b3d; */
-/* primary: #5f4ca5; */
-/* bg: white */
-
 :root {
   --bg-color: #222329;
   --bg-lighter: #31323a;
-  /* --bg-color: white; */
   --primary: #d8d8d8;
-  /* --secondary: #ce9eff; */
-  --secondary: #444964;
-  --secondary-lighter: #7a83b3;
-  --secondary-three: #51587c;
+  --secondary: #e7b728;
+  --secondary-lighter: #ffca2a;
   --error-color: #f04e4e;
-  /* --text:  */
 }
 
-input,
-textarea,
-button,
-select,
-a {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
+/* ========== General styles ========== */
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   outline: none;
+  text-decoration: none;
   color: var(--primary);
+  -webkit-tap-highlight-color: transparent;
 }
 
 body,
@@ -38,19 +24,6 @@ html {
   margin: 0;
   padding: 0;
   font-family: "Ubuntu", sans-serif;
-  /* font-family: "Poppins", sans-serif; */
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-hr {
-  border: 1px solid var(--bg-lighter);
 }
 
 body::-webkit-scrollbar {
@@ -66,71 +39,77 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px;
 }
 
-button {
-  cursor: pointer;
+li {list-style: none;}
+
+p {margin: 1rem 0;}
+
+p a {color: var(--secondary);}
+
+hr {
+  border: 1px solid var(--bg-lighter);
+  margin: 2em 0;
+  max-width: 100%;
 }
 
-.alert {
-  color: var(--error-color);
-}
-
-.success {
-  color: #20db9a;
-}
-
-input {
-  font-family: "Ubuntu", sans-serif;
-  color: var(--primary);
-}
-
-code {
-  background-color: var(--bg-lighter);
-  border-radius: 3px;
-}
-
-/* === login and register page === */
 h1 {
   font-weight: bold;
   margin: 0;
 }
 
-.text {
-  margin: 20px 0 30px;
+input {
+  background-color: var(--bg-lighter);
+  border: none;
+  padding: 14px;
+  margin: 5px 0;
+  width: 100%;
+  border-radius: 50px;
 }
 
-span {
-  font-size: 12px;
-}
-
-button {
-  border-radius: 20px;
-  border: 1px solid var(--secondary-lighter);
-  background-color: var(--secondary-lighter);
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: bold;
-  padding: 12px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
+code {
+  padding: 4px 4px 4px 8px;
+  font-size: 0.9rem;
+  position: relative;
+  background-color: var(--bg-lighter);
+  border-radius: 4px;
 }
 
 .btn {
-  width: 100%;
+  background-color: var(--secondary);
+  border: 1.3px solid var(--secondary);
+  color: var(--bg-color);
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+  border-radius: 50px;
+  padding: 10px 18px;
   margin: 5px 0;
 }
 
-button:active {
-  transform: scale(0.95);
+.btn:active {transform: scale(0.9);}
+
+.btn--large {width: 100%;}
+
+.btn--secondary {
+  background-color: transparent;
+  border-color: var(--primary);
+  color: var(--primary);
 }
 
-button:focus {
-  outline: none;
-}
+.success,
+.alert {text-align: center;}
+
+.alert {color: var(--error-color);}
+
+/* ========== Login and register page ========== */
+
+.text {margin: 20px 0 30px;}
+
+.auth {display: none;}
 
 button.ghost {
   background-color: transparent;
-  border-color: #ffffff;
+  border-color: var(--primary);
 }
 
 .form {
@@ -144,18 +123,8 @@ button.ghost {
   text-align: center;
 }
 
-input {
-  background-color: var(--bg-lighter);
-  border: none;
-  padding: 14px;
-  margin: 5px 0;
-  width: 100%;
-  border-radius: 50px;
-}
-
 .container {
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -175,9 +144,7 @@ input {
   z-index: 2;
 }
 
-.container.right-panel-active .sign-in-container {
-  transform: translateX(100%);
-}
+.container.right-panel-active .sign-in-container {transform: translateX(100%);}
 
 .sign-up-container {
   left: 10%;
@@ -193,20 +160,6 @@ input {
   animation: show 0.6s;
 }
 
-@keyframes show {
-  0%,
-  49.99% {
-    opacity: 0;
-    z-index: 1;
-  }
-
-  50%,
-  100% {
-    opacity: 1;
-    z-index: 5;
-  }
-}
-
 .overlay-container {
   position: absolute;
   top: 0;
@@ -218,26 +171,14 @@ input {
   z-index: 100;
 }
 
-.container.right-panel-active .overlay-container {
-  left: 0;
-}
+.container.right-panel-active .overlay-container {left: 0;}
 
 .overlay {
-  background: var(--secondary-lighter);
-  background: -webkit-linear-gradient(
-    to right,
-    var(--secondary-three),
-    var(--secondary-lighter)
-  );
-  background: linear-gradient(
-    to right,
-    var(--secondary-three),
-    var(--secondary-lighter)
-  );
+  background: var(--secondary);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 0 0;
-  color: #ffffff;
+  color: var(--primary);
   position: relative;
   left: -100%;
   height: 100%;
@@ -246,9 +187,7 @@ input {
   transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
-  transform: translateX(50%);
-}
+.container.right-panel-active .overlay {transform: translateX(50%);}
 
 .overlay-panel {
   position: absolute;
@@ -265,24 +204,18 @@ input {
   transition: transform 0.6s ease-in-out;
 }
 
-.overlay-left {
-  transform: translateX(-20%);
-}
+.overlay-left {transform: translateX(-20%);}
 
-.container.right-panel-active .overlay-left {
-  transform: translateX(0);
-}
+.container.right-panel-active .overlay-left {transform: translateX(0);}
 
 .overlay-right {
   right: 0;
   transform: translateX(0);
 }
 
-.container.right-panel-active .overlay-right {
-  transform: translateX(20%);
-}
+.container.right-panel-active .overlay-right {transform: translateX(20%);}
 
-/* === header === */
+/* ========== Header and Navigation ========== */
 .header {
   display: flex;
   justify-content: space-around;
@@ -290,17 +223,17 @@ input {
   padding: 0.6rem;
 }
 
-nav {
-  display: flex;
-}
+nav {display: flex;}
 
 .navbar__item {
   margin: 0 1rem 0 1rem;
   padding: 0.5rem;
 }
 
-.header__right {
-  font-weight: bolder;
+.btn--auth {
+  background-color: var(--secondary);
+  padding: 8px 12px;
+  border-radius: 50px;
 }
 
 .navigation,
@@ -308,7 +241,9 @@ nav {
   display: none;
 }
 
-/* === home page === */
+.authentication {display: none;}
+
+/* ========== Home page ========== */
 .hero {
   margin: 1rem;
   border-radius: 1rem;
@@ -318,20 +253,16 @@ nav {
   justify-content: space-around;
 }
 
-.hero__content h1 {
-  font-size: 2.5rem;
-}
+.hero__content h1 {font-size: 2.5rem;}
 
-.hero__content p {
-  margin-bottom: 1rem;
-}
+.hero__content p {margin: 1rem 0;}
 
 .hero__content .btn {
-  background-color: var(--secondary-lighter);
-  color: var(--primary);
-  border-radius: 4px;
+  display: block;
+  width: 150px;
+  text-align: center;
   padding: 0.7rem;
-  user-select: none;
+  border-radius: 4px;
 }
 
 .why {
@@ -349,13 +280,9 @@ nav {
   margin: 2rem 0;
 }
 
-.why__details p {
-  max-width: 300px;
-}
+.why__details p {max-width: 300px;}
 
-.why img {
-  width: 250px;
-}
+.why img {width: 250px;}
 
 .fact {
   display: flex;
@@ -365,26 +292,15 @@ nav {
   height: 50vh;
 }
 
-/* ===== docs ===== */
+/* ========== Documentation page ========== */
 .docs {
   margin: 2rem 0 0 2rem;
-  width: 70%;
-}
-
-hr {
-  margin: 2em 0;
-  max-width: 100%;
+  width: 65%;
 }
 
 .docs__link {
   color: var(--secondary-lighter);
   font-weight: bolder;
-}
-
-code {
-  padding: 4px 4px 4px 8px;
-  font-size: 0.9rem;
-  position: relative;
 }
 
 .example {
@@ -402,46 +318,31 @@ code {
   background-color: var(--secondary-lighter);
 }
 
-table {
-  margin: 2rem 0;
-}
+table {margin: 2rem 0;}
 
-table td {
-  border-bottom: 1px solid var(--bg-lighter);
-}
+table td {border-bottom: 1px solid var(--bg-lighter);}
 
-tr:hover:not(:first-child) {
-  background-color: var(--bg-lighter);
-}
+tr:hover:not(:first-child) {background-color: var(--bg-lighter);}
 
-table tr th {
-  text-align: left;
-}
-table tr td {
-  padding: 6px;
-}
+table tr th {text-align: left;}
 
-/* === user page === */
-.profile {
-  display: flex;
-}
+table tr td {padding: 8px;}
+
+/* ========== Profile page ========== */
+.profile {display: flex;}
+
+.profile table {width: 100%;}
 
 .profile section {
   margin: 2rem 2rem;
   width: 30%;
 }
 
-.profile button {
-  padding: 6px;
-}
+.profile button {padding: 6px;}
 
-.sidebar {
-  width: 50%;
-}
+.sidebar {width: 50%;}
 
-.sidebar .active {
-  background-color: var(--bg-lighter);
-}
+.sidebar .active {background-color: var(--bg-lighter);}
 
 .sidebar__item {
   padding: 10px;
@@ -454,19 +355,30 @@ table tr td {
   width: 100%;
 }
 
-.profile code {
-  padding: 6px;
+.profile code {padding: 6px;}
+  
+/* ========== Animations ========== */
+
+@keyframes show {
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  50%,
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
 }
 
+/* ========== Responsive ========== */
 @media screen and (max-width: 768px) {
-  /* === header === */
-  .header {
-    justify-content: space-between;
-  }
+  .form {padding: 0 10px;}
 
-  .logo {
-    font-size: 1.5rem;
-  }
+  /* === header === */
+  .header {justify-content: space-between;}
 
   #bars {
     font-size: 2rem;
@@ -476,7 +388,6 @@ table tr td {
   .navigation {
     position: fixed;
     top: 0;
-    display: none;
     background-color: var(--bg-lighter);
     z-index: 4;
     height: 100vh;
@@ -495,32 +406,40 @@ table tr td {
     display: block;
   }
 
-  .active {
-    display: block;
+  .authentication {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    background-color: var(--bg-lighter);
+    bottom: 0;
+    width: 100%;
+    padding: 4px;
   }
+
+  .authentication .btn {
+    text-align: center;
+    padding: 6px;
+    width: 49%;
+    border-radius: 50px;
+  }
+
+  .active {display: block;}
 
   .header div,
   nav {
     display: none;
   }
 
-  /* === index page === */
-  .hero {
-    margin: 0.4rem;
-  }
+  /* ========== Home page ========== */
+  .hero {margin: 0.4rem;}
 
-  .hero__content {
-    margin: 10px;
-  }
+  .hero__content {margin: 10px;}
 
-  .fact {
-    text-align: center;
-  }
+  .fact {text-align: center;}
 
-  .fact h2 {
-    max-width: 90%;
-  }
-  /* === docs === */
+  .fact h2 {max-width: 90%;}
+
+  /* ========== Documentation Page ========== */
   .docs {
     margin: 1rem auto;
     padding: 5px;
@@ -535,10 +454,10 @@ table tr td {
     white-space: nowrap;
   }
 
-  /* === user page === */
+  /* ========== Profile page ========== */
   .profile {
-    display: block;
-    margin: auto;
+    width: 60%;
+    margin: 12vh auto;
   }
 
   .profile section {
@@ -546,40 +465,28 @@ table tr td {
     margin: auto;
   }
 
-  .sidebar {
-    display: none;
-  }
+  .profile h2 {text-align: center;}
+
+  .sidebar {display: none;}
 }
 
 @media screen and (max-width: 500px) {
-  /* === login and register === */
-
-  .overlay-container {
-    display: none;
-  }
+  /* ========== Login and Register page ========== */
+  .overlay-container {display: none;}
 
   .form-container {
     width: 100%;
     left: 0;
   }
 
-  .container.right-panel-active .sign-up-container {
-    transform: translateX(0%);
-    animation: none;
-  }
+  .container.right-panel-active .sign-up-container {transform: translateX(0%);}
 
   .auth {
     margin: 10% 0;
-    font-size: 0.9rem;
+    display: block;
   }
 
-  .auth a {
-    color: var(--secondary-lighter);
-  }
-
-  .navigation {
-    width: 80%;
-  }
+  .navigation {width: 80%;}
 
   /* === home page === */
   .hero img {
@@ -596,8 +503,6 @@ table tr td {
     margin: 2rem 0;
   }
 
-  /* === user page === */
-  .profile {
-    width: 90%;
-  }
+  /* ========== Profile page ========== */
+  .profile {width: 90%;}
 }
