--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,14 @@
   <div class="hero__content">
     <h1>Fun facts</h1>
     <p>Discovery wonderful things every time you call the api.</p>
-    <a class="btn" href="/docs">Get started</a>
+    <a class="btn" href="/docs" role="button">Get started</a>
   </div>
   <div>
-    <img src="hero.svg" alt="test" style="max-width: 35vw; min-width: 10vw" />
+    <img
+      src="/img/hero.svg"
+      alt="test"
+      style="max-width: 35vw; min-width: 10vw"
+    />
   </div>
 </section>
 
@@ -14,18 +18,18 @@
 
   <div class="why__details">
     <div>
-      <img src="easy-to-use.png" alt="easy" />
-      <h3>EASY</h3>
+      <img src="/img/easy-to-use.png" alt="easy" />
+      <h3>Easy</h3>
       <p>Easy to use! learn how to use in only a few minutes.</p>
     </div>
     <div>
-      <img src="fast.png" alt="fast" />
-      <h3>FAST ⚡</h3>
+      <img src="/img/fast.png" alt="fast" />
+      <h3>Fast ⚡</h3>
       <p>learn wonderful things very fast with this api.</p>
     </div>
     <div>
-      <img src="reliable.png" alt="" />
-      <h3>RELIABLE 🤝</h3>
+      <img src="/img/reliable.png" alt="reliable" />
+      <h3>Reliable 🤝</h3>
       <p>All the facts are checked! learn only the truth.</p>
     </div>
   </div>
